// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component renders component 1`] = `
<FontAwesomeIcon
  border={false}
  className="Icon"
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        320,
        512,
        Array [],
        "f0d7",
        "M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z",
      ],
      "iconName": "caret-down",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  pull={null}
  pulse={false}
  rotation={null}
  size={null}
  spin={false}
  swapOpacity={false}
  symbol={false}
  title=""
  transform={null}
/>
`;

exports[`Icon component renders component correctly 1`] = `
<FontAwesomeIcon
  border={false}
  className="Icon"
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [],
      "iconName": "caret-down",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  pull={null}
  pulse={false}
  rotation={null}
  size={null}
  spin={false}
  swapOpacity={false}
  symbol={false}
  title=""
  transform={null}
/>
`;
